compute losses element wise to weigh

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -4431,74 +4431,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{13: 0.3031587208161664, 3: 0.31794238683127574, 7: 0.3501472920915477, 11: 0.7017257039055406, 6: 0.7347598668568711, 2: 1.0159105851413543, 14: 1.6942982456140354, 15: 2.9601532567049813, 1: 3.6790476190476196, 9: 4.558112094395281, 8: 8.047916666666667, 5: 8.047916666666667, 10: 9.538271604938272, 4: 10.09934640522876, 12: 17.16888888888889}\n",
-      "OrderedDict([(1, 3.6790476190476196), (2, 1.0159105851413543), (3, 0.31794238683127574), (4, 10.09934640522876), (5, 8.047916666666667), (6, 0.7347598668568711), (7, 0.3501472920915477), (8, 8.047916666666667), (9, 4.558112094395281), (10, 9.538271604938272), (11, 0.7017257039055406), (12, 17.16888888888889), (13, 0.3031587208161664), (14, 1.6942982456140354), (15, 2.9601532567049813)])\n",
-      "tensor([ 3.6790,  1.0159,  0.3179, 10.0993,  8.0479,  0.7348,  0.3501,  8.0479,\n",
-      "         4.5581,  9.5383,  0.7017, 17.1689,  0.3032,  1.6943,  2.9602],\n",
-      "       dtype=torch.float64)\n"
+      "torch.Size([32])\n",
+      "torch.Size([32])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([[0.7017],\n",
-       "        [0.3032],\n",
-       "        [3.6790],\n",
-       "        ...,\n",
-       "        [0.3032],\n",
-       "        [0.3501],\n",
-       "        [0.3179]], dtype=torch.float64)"
+       "tensor(10.0244)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import collections\n",
+    "inputs = torch.ones(32, 1, 64, 64)  # Example batch of inputs\n",
+    "pseudo_labels = torch.ones(32, 1)  # Example batch of inputs\n",
+    "targets = torch.ones(32, 1, 64, 64)  # Example batch of targets\n",
+    "weights = torch.ones(32,1,1,1)  # Example batch of weights\n",
     "\n",
-    "well_numbers = dataframe['well_number']\n",
-    "wells = torch.from_numpy(np.vstack(well_numbers.to_numpy())) - 1\n",
-    "well_mapping = {well:1/count for well, count in dataframe['well_number'].value_counts().items()}\n",
-    "well_mean_weight = np.mean(dataframe['well_number'].value_counts().values)\n",
-    "sample_weight = {well: ratio/well_mean_weight for well, ratio in dataframe['well_number'].value_counts().items()}\n",
-    "sample_weight = {well: 1/ratio for well, ratio in sample_weight.items()}\n",
-    "sample_weight = collections.OrderedDict(sorted(sample_weight.items()))\n",
-    "sample_weight = torch.tensor(list(sample_weight.values()))\n",
-    "sample_weight[wells]\n",
-    "# print(well_weights)\n",
-    "# class_weights\n",
-    "# well_weights_map = torch.tensor(list(class_weights.values()))\n",
-    "# wells_to_data = {}\n",
-    "# wells_to_labels = {}\n",
-    "# for well in well_numbers:\n",
-    "#     wells_to_data[well]  = torch.from_numpy(np.vstack(train_df[train_df['well_number']==well]['data']))\n",
-    "#     wells_to_labels[well]= torch.from_numpy(np.vstack(train_df[train_df['well_number']==well]['labels']))\n",
+    "class PseduoLabelBCELoss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "          super(PseduoLabelBCELoss, self).__init__()\n",
     "\n",
-    "# ensemble_3 = (wells_to_data[3], wells_to_labels[3])\n",
-    "# ensemble_7 = wells_to_data[7]\n",
-    "# ensemble_13 = wells_to_data[13]\n",
-    "# ensemble_11_6 = torch.vstack((wells_to_data[11], wells_to_data[6]))\n",
-    "# ensemble_rest = torch.vstack((\n",
-    "#     wells_to_data[1],\n",
-    "#     wells_to_data[2], \n",
-    "#     wells_to_data[4],\n",
-    "#     wells_to_data[5],\n",
-    "#     wells_to_data[8],\n",
-    "#     wells_to_data[9],\n",
-    "#     wells_to_data[10],\n",
-    "#     wells_to_data[12],\n",
-    "#     wells_to_data[14],\n",
-    "#     wells_to_data[15]\n",
-    "# ))"
+    "    def forward(self, pseudo_label, targets, weights):\n",
+    "        if weights == None:\n",
+    "            weights = torch.ones(targets.shape[0])\n",
+    "            \n",
+    "        tensors = targets.flatten(start_dim=1)\n",
+    "        contains_ones = (tensors == 1).any(dim=1)\n",
+    "        labels = contains_ones.int()\n",
+    "        bce = F.binary_cross_entropy_with_logits(pseudo_label, labels.view(-1,1).float(), reduction='none')\n",
+    "        return (bce * weights).sum() / len(targets)\n",
+    "\n",
+    "loss = PseduoLabelBCELoss()(pseudo_labels, targets, weights)\n",
+    "loss"
    ]
   },
   {
