add empty dims to well weights

--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -4431,24 +4431,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([32])\n",
-      "torch.Size([32])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor(10.0244)"
+       "tensor(5200.2896)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4459,21 +4451,28 @@
     "targets = torch.ones(32, 1, 64, 64)  # Example batch of targets\n",
     "weights = torch.ones(32,1,1,1)  # Example batch of weights\n",
     "\n",
-    "class PseduoLabelBCELoss(nn.Module):\n",
+    "class DiceBCELoss(nn.Module):\n",
     "    def __init__(self):\n",
-    "          super(PseduoLabelBCELoss, self).__init__()\n",
+    "        super(DiceBCELoss, self).__init__()\n",
     "\n",
-    "    def forward(self, pseudo_label, targets, weights):\n",
+    "    def forward(self, inputs, targets, weights, smooth=1):\n",
     "        if weights == None:\n",
-    "            weights = torch.ones(targets.shape[0])\n",
-    "            \n",
-    "        tensors = targets.flatten(start_dim=1)\n",
-    "        contains_ones = (tensors == 1).any(dim=1)\n",
-    "        labels = contains_ones.int()\n",
-    "        bce = F.binary_cross_entropy_with_logits(pseudo_label, labels.view(-1,1).float(), reduction='none')\n",
-    "        return (bce * weights).sum() / len(targets)\n",
+    "           weights = torch.ones(targets.shape[0])\n",
+    "        \n",
+    "        #comment out if your model contains a sigmoid or equivalent activation layer\n",
+    "        inputs = F.sigmoid(inputs)       \n",
+    "        \n",
+    "        inputs_flat = inputs\n",
+    "        targets_flat = targets\n",
     "\n",
-    "loss = PseduoLabelBCELoss()(pseudo_labels, targets, weights)\n",
+    "        intersection = (inputs_flat * targets_flat)\n",
+    "        dice_loss = 1 - (2 * intersection + smooth) / (inputs_flat.sum(dim=0) + targets_flat.sum(dim=0) + smooth)\n",
+    "        bce_loss = F.binary_cross_entropy(inputs_flat, targets_flat, reduction='none')\n",
+    "        combined_loss = bce_loss + dice_loss\n",
+    "        \n",
+    "        return (combined_loss*weights).sum() / len(targets)\n",
+    "\n",
+    "loss = DiceBCELoss()(inputs, targets, weights)\n",
     "loss"
    ]
   },
