--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -6104,6 +6104,62 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3.7470,  1.0180,  0.3514, 10.5424, 15.1707,  0.7746,  0.3777,  8.0779,\n",
+       "         4.5735,  9.7188,  0.4284, 15.1707,  0.3265,  1.7521,  3.0640],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import collections\n",
+    "\n",
+    "dataframe = data_pipeline.build_dataframe(use_processed_images=False)\n",
+    "X = torch.from_numpy(np.vstack(dataframe['data'].to_numpy()))\n",
+    "X = torch.nan_to_num(X)\n",
+    "Y = torch.from_numpy(np.vstack(dataframe['labels'].to_numpy()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 3.7470,  1.0180,  0.3514, 10.5424, 15.1707,  0.7746,  0.3777,  8.0779,\n",
+       "         4.5735,  9.7188,  0.4284, 15.1707,  0.3265,  1.7521,  3.0640],\n",
+       "       dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "well_numbers = dataframe['well_number']\n",
+    "wells = torch.from_numpy(np.vstack(well_numbers.to_numpy())) - 1\n",
+    "well_mean_weight = np.mean(dataframe['well_number'].value_counts().values)\n",
+    "sample_weight = {well: ratio/well_mean_weight for well, ratio in dataframe['well_number'].value_counts().items()}\n",
+    "sample_weight = {well: 1/ratio for well, ratio in sample_weight.items()}\n",
+    "sample_weight = collections.OrderedDict(sorted(sample_weight.items()))\n",
+    "sample_weight = torch.tensor(list(sample_weight.values()))\n",
+    "sample_weight"
+   ]
   }
  ],
  "metadata": {
