--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -6107,6 +6107,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "well_number\n",
+       "13    1905\n",
+       "3     1770\n",
+       "7     1647\n",
+       "11    1452\n",
+       "6      803\n",
+       "2      611\n",
+       "14     355\n",
+       "15     203\n",
+       "1      166\n",
+       "9      136\n",
+       "8       77\n",
+       "10      64\n",
+       "4       59\n",
+       "12      41\n",
+       "5       41\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe['well_number'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
    "outputs": [
@@ -6134,18 +6170,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 3.7470,  1.0180,  0.3514, 10.5424, 15.1707,  0.7746,  0.3777,  8.0779,\n",
-       "         4.5735,  9.7188,  0.4284, 15.1707,  0.3265,  1.7521,  3.0640],\n",
-       "       dtype=torch.float64)"
+       "{13: 0.32650918635170606,\n",
+       " 3: 0.35141242937853107,\n",
+       " 7: 0.37765634486945965,\n",
+       " 11: 0.42837465564738286,\n",
+       " 6: 0.7745952677459527,\n",
+       " 2: 1.0180032733224222,\n",
+       " 14: 1.7521126760563381,\n",
+       " 15: 3.064039408866995,\n",
+       " 1: 3.746987951807229,\n",
+       " 9: 4.573529411764706,\n",
+       " 8: 5,\n",
+       " 10: 5,\n",
+       " 4: 5,\n",
+       " 12: 5,\n",
+       " 5: 5}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6155,9 +6203,59 @@
     "wells = torch.from_numpy(np.vstack(well_numbers.to_numpy())) - 1\n",
     "well_mean_weight = np.mean(dataframe['well_number'].value_counts().values)\n",
     "sample_weight = {well: ratio/well_mean_weight for well, ratio in dataframe['well_number'].value_counts().items()}\n",
-    "sample_weight = {well: 1/ratio for well, ratio in sample_weight.items()}\n",
-    "sample_weight = collections.OrderedDict(sorted(sample_weight.items()))\n",
-    "sample_weight = torch.tensor(list(sample_weight.values()))\n",
+    "sample_weight = {well: min(1/ratio, 5) for well, ratio in sample_weight.items()}\n",
+    "# sample_weight = collections.OrderedDict(sorted(sample_weight.items()))\n",
+    "# sample_weight = torch.tensor(list(sample_weight.values()))\n",
+    "sample_weight"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.602611215796459\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{13: 0.0,\n",
+       " 3: 0.0,\n",
+       " 7: 0.0,\n",
+       " 11: 0.0,\n",
+       " 6: 0.0,\n",
+       " 2: 1.2002029568850785e-263,\n",
+       " 14: 1.8140199526557318e-152,\n",
+       " 15: 1.8681137151174924e-86,\n",
+       " 1: 2.189269059604711e-70,\n",
+       " 9: 2.3395568157583707e-57,\n",
+       " 8: 9.828970434623074e-32,\n",
+       " 10: 4.3484681499369876e-26,\n",
+       " 4: 6.453698953890851e-24,\n",
+       " 12: 4.237496741340955e-16,\n",
+       " 5: 4.237496741340955e-16}"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "well_numbers = dataframe['well_number']\n",
+    "wells = torch.from_numpy(np.vstack(well_numbers.to_numpy())) - 1\n",
+    "well_mean_weight = np.mean(np.log(dataframe['well_number'].value_counts().values))\n",
+    "print(well_mean_weight)\n",
+    "sample_weight = {well: np.exp(well_mean_weight - ratio) for well, ratio in dataframe['well_number'].value_counts().items()}\n",
+    "# sample_weight = {well: 1/ratio for well, ratio in sample_weight.items()}\n",
+    "\n",
+    "# sample_weight = collections.OrderedDict(sorted(sample_weight.items()))\n",
+    "# sample_weight = torch.tensor(list(sample_weight.values()))\n",
     "sample_weight"
    ]
   }
