kfolds attu with weighting

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,40 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pydensecrf.densecrf as dcrf\n",
-    "from pydensecrf.utils import unary_from_labels, create_pairwise_bilateral, create_pairwise_gaussian\n",
-    "\n",
-    "def apply_crf(image, unary_predictions):\n",
-    "    # Convert the predictions to unary potentials\n",
-    "    \n",
-    "    unary = unary_from_labels(unary_predictions, 2, gt_prob=0.62, zero_unsure=False).reshape(2, -1)\n",
-    "\n",
-    "    # Create a DenseCRF object\n",
-    "    d = dcrf.DenseCRF2D(image.shape[1], image.shape[0], 2)\n",
-    "\n",
-    "    # Set unary potentials\n",
-    "    d.setUnaryEnergy(unary)\n",
-    "\n",
-    "    # This creates the color-independent features and then add them to the CRF\n",
-    "    d.addPairwiseGaussian(sxy=(3, 3), compat=3)\n",
-    "\n",
-    "    # Perform inference\n",
-    "    Q = d.inference(5)\n",
-    "\n",
-    "    # Get the MAP (maximum a posteriori) segmentation\n",
-    "    map_labels = np.argmax(Q, axis=0).reshape((image.shape[0], image.shape[1]))\n",
-    "\n",
-    "\n",
-    "    return map_labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,11 +39,11 @@
     "import r2u_att\n",
     "import attunet\n",
     "\n",
-    "# model = unet.UNet(n_channels=1, n_classes=1, n_steps=4)\n",
+    "model = unet.UNet(n_channels=1, n_classes=1, n_steps=4, with_pl=True)\n",
     "# model = baseline.Baseline()\n",
-    "model = r2u_att.R2AttU_Net(img_ch=1, output_ch=1, t=2)\n",
+    "# model = r2u_att.R2AttU_Net(img_ch=1, output_ch=1, t=2)\n",
     "# model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
-    "model.load_state_dict(torch.load('./checkpoints/r2u/r2u_att_2.pt', map_location=torch.device('cpu')))\n",
+    "model.load_state_dict(torch.load('./checkpoints/unet/unet_21.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "X_test, X_names, X_train, Y_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)\n",
@@ -85,8 +52,32 @@
     "train_data = torch.from_numpy(np.vstack(train_df['data'].to_numpy()))\n",
     "train_data = torch.nan_to_num(train_data)\n",
     "test_data = torch.from_numpy(np.vstack(test_df['data'].to_numpy()))\n",
-    "test_data = torch.nan_to_num(test_data)\n",
-    "outliers = ((test_data.min(dim=1, keepdim=True).values < -10) == True).flatten()"
+    "test_data = torch.nan_to_num(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([36])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_less_than_neg_10 = torch.sum(test_data < -10, dim=1)\n",
+    "total_elements_per_row = test_data.size(1)\n",
+    "ratios = count_less_than_neg_10.float() / total_elements_per_row\n",
+    "outliers = (ratios > .1).flatten()\n",
+    "outliers[outliers].shape\n",
+    "# test_data[test_data < -10] = 0"
    ]
   },
   {
@@ -362,7 +353,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2538it [02:24, 17.51it/s]\n"
+      "2538it [00:55, 46.07it/s]\n"
      ]
     }
    ],
@@ -395,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('./outputs/KIRBY_predictions_20.csv')"
+    "preds_df.to_csv('./outputs/KIRBY_predictions_21.csv')"
    ]
   },
   {
