setup kfolds for renet50 unet

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +81,64 @@
     "outliers = (ratios > .05).flatten()\n",
     "outliers[outliers].shape\n",
     "# test_data[test_data < -10] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upsample_blocks[0] in: 2048   out: 512\n",
+      "upsample_blocks[1] in: 512   out: 256\n",
+      "upsample_blocks[2] in: 256   out: 128\n",
+      "upsample_blocks[3] in: 128   out: 64\n",
+      "upsample_blocks[4] in: 64   out: 32\n"
+     ]
+    }
+   ],
+   "source": [
+    "from backboned_unet import Unet\n",
+    "\n",
+    "class DiceBCELoss(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(DiceBCELoss, self).__init__()\n",
+    "\n",
+    "    def forward(self, inputs, targets, weights, smooth=1):\n",
+    "        if weights == None:\n",
+    "           weights = torch.ones(targets.shape[0], 1, 1, 1)\n",
+    "        \n",
+    "        #comment out if your model contains a sigmoid or equivalent activation layer\n",
+    "        inputs = F.sigmoid(inputs)       \n",
+    "        \n",
+    "        inputs_flat = inputs\n",
+    "        targets_flat = targets\n",
+    "\n",
+    "        intersection = (inputs_flat * targets_flat)\n",
+    "        dice_loss = 1 - (2 * intersection + smooth) / (inputs_flat.sum(dim=0) + targets_flat.sum(dim=0) + smooth)\n",
+    "        bce_loss = F.binary_cross_entropy(inputs_flat, targets_flat, reduction='none')\n",
+    "        combined_loss = bce_loss + dice_loss\n",
+    "        \n",
+    "        return (combined_loss*weights).sum() / len(targets)\n",
+    "\n",
+    "network = Unet(backbone_name='resnet50', classes=1, decoder_filters=(512, 256, 128, 64, 32))\n",
+    "criterion = torch.nn.CrossEntropyLoss(ignore_index=255)\n",
+    "optimizer = torch.optim.Adam([{'params': network.get_pretrained_parameters(), 'lr':1e-5},\n",
+    "                              {'params': network.get_random_initialized_parameters()}], lr=1e-4)\n",
+    "\n",
+    "image_tensor = torch.randn(2, 3, 36, 36)  # Assuming 3-channel image, adjust dimensions accordingly\n",
+    "labels = torch.ones((2, 1, 36, 36))\n",
+    "\n",
+    "# Resize the image tensor to 64x64 using bilinear interpolation\n",
+    "resized_image_tensor = F.interpolate(image_tensor, size=(64, 64), mode='bilinear', align_corners=False)\n",
+    "resized_label_tensor = F.interpolate(labels.float(), size=(64, 64), mode='nearest').float()\n",
+    "\n",
+    "network.eval()\n",
+    "preds = network(resized_image_tensor)\n",
+    "dice_loss = DiceBCELoss()(preds, resized_label_tensor, weights=None)"
    ]
   },
   {
