prep kfolds resnet18

--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,22 @@
     "import r2u_att\n",
     "import attunet\n",
     "\n",
-    "# model = unet.UNet(n_channels=1, n_classes=1, n_steps=4, with_pl=True)\n",
+    "model = unet.UNet(n_channels=1, n_classes=1, n_steps=4, with_pl=True)\n",
     "# model = baseline.Baseline()\n",
     "# model = r2u_att.R2AttU_Net(img_ch=1, output_ch=1, t=2)\n",
-    "model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
-    "model.load_state_dict(torch.load('./checkpoints/r2u/attunet_100e.pt', map_location=torch.device('cpu')))\n",
+    "# model = attunet.AttU_Net(img_ch=1, output_ch=1)\n",
+    "model.load_state_dict(torch.load('./checkpoints/unet/unet_pl_tau_5_gamma_1_100e.pt', map_location=torch.device('cpu')))\n",
     "test_df = data_pipeline.build_test_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "train_df = data_pipeline.build_dataframe(use_processed_images=False, limit_well_number=None)\n",
     "test_data = torch.from_numpy(np.vstack(test_df['data'].to_numpy()))\n",
     "test_data = torch.nan_to_num(test_data)\n",
+    "\n",
+    "# count_less_than_neg_10 = torch.sum(test_data < -10, dim=1)\n",
+    "# total_elements_per_row = test_data.size(1)\n",
+    "# ratios = count_less_than_neg_10.float() / total_elements_per_row\n",
+    "# outliers = (ratios > .05).flatten()\n",
+    "# test_data[test_data < -10] = 0\n",
+    "\n",
     "outliers = ((test_data.min(dim=1, keepdim=True).values < -10) == True).flatten()\n",
     "\n",
     "X_test, X_names, X_train, Y_train = data_pipeline.build_test_dataloaders(test_df, train_df, apply_scaling=True)\n",
@@ -60,86 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([39])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_less_than_neg_10 = torch.sum(test_data < -10, dim=1)\n",
-    "total_elements_per_row = test_data.size(1)\n",
-    "ratios = count_less_than_neg_10.float() / total_elements_per_row\n",
-    "outliers = (ratios > .05).flatten()\n",
-    "outliers[outliers].shape\n",
-    "# test_data[test_data < -10] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upsample_blocks[0] in: 2048   out: 512\n",
-      "upsample_blocks[1] in: 512   out: 256\n",
-      "upsample_blocks[2] in: 256   out: 128\n",
-      "upsample_blocks[3] in: 128   out: 64\n",
-      "upsample_blocks[4] in: 64   out: 32\n"
-     ]
-    }
-   ],
-   "source": [
-    "from backboned_unet import Unet\n",
-    "\n",
-    "class DiceBCELoss(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(DiceBCELoss, self).__init__()\n",
-    "\n",
-    "    def forward(self, inputs, targets, weights, smooth=1):\n",
-    "        if weights == None:\n",
-    "           weights = torch.ones(targets.shape[0], 1, 1, 1)\n",
-    "        \n",
-    "        #comment out if your model contains a sigmoid or equivalent activation layer\n",
-    "        inputs = F.sigmoid(inputs)       \n",
-    "        \n",
-    "        inputs_flat = inputs\n",
-    "        targets_flat = targets\n",
-    "\n",
-    "        intersection = (inputs_flat * targets_flat)\n",
-    "        dice_loss = 1 - (2 * intersection + smooth) / (inputs_flat.sum(dim=0) + targets_flat.sum(dim=0) + smooth)\n",
-    "        bce_loss = F.binary_cross_entropy(inputs_flat, targets_flat, reduction='none')\n",
-    "        combined_loss = bce_loss + dice_loss\n",
-    "        \n",
-    "        return (combined_loss*weights).sum() / len(targets)\n",
-    "\n",
-    "network = Unet(backbone_name='resnet50', classes=1, decoder_filters=(512, 256, 128, 64, 32))\n",
-    "criterion = torch.nn.CrossEntropyLoss(ignore_index=255)\n",
-    "optimizer = torch.optim.Adam([{'params': network.get_pretrained_parameters(), 'lr':1e-5},\n",
-    "                              {'params': network.get_random_initialized_parameters()}], lr=1e-4)\n",
-    "\n",
-    "image_tensor = torch.randn(2, 3, 36, 36)  # Assuming 3-channel image, adjust dimensions accordingly\n",
-    "labels = torch.ones((2, 1, 36, 36))\n",
-    "\n",
-    "# Resize the image tensor to 64x64 using bilinear interpolation\n",
-    "resized_image_tensor = F.interpolate(image_tensor, size=(64, 64), mode='bilinear', align_corners=False)\n",
-    "resized_label_tensor = F.interpolate(labels.float(), size=(64, 64), mode='nearest').float()\n",
-    "\n",
-    "network.eval()\n",
-    "preds = network(resized_image_tensor)\n",
-    "dice_loss = DiceBCELoss()(preds, resized_label_tensor, weights=None)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -398,21 +329,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "0it [00:00, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2538it [01:10, 35.90it/s]\n"
+      "2538it [00:57, 44.28it/s]\n"
      ]
     }
    ],
@@ -432,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,11 +365,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "preds_df.to_csv('./outputs/KIRBY_predictions_23.csv')"
+    "preds_df.to_csv('./outputs/KIRBY_predictions_25.csv')"
    ]
   },
   {
